--- a/Captsone_Project_Classification_Credit_Card_Default_Prediction.ipynb
+++ b/Captsone_Project_Classification_Credit_Card_Default_Prediction.ipynb
@@ -91,6 +91,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**GIT HUB Link **:https://github.com/krunal0789/Classification_Credit-Card-Default-Prediction"
+      ],
+      "metadata": {
+        "id": "YF5r6zCKzENi"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -10472,7 +10481,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/wmL2/WfiLfNaI5FDzVHA",
+      "authorship_tag": "ABX9TyPBpmtavE+baFpUqsfzE1t1",
       "include_colab_link": true
     },
     "kernelspec": {
